refresh gitignore rules

--- a/notebooks/5_validation_tunning.ipynb
+++ b/notebooks/5_validation_tunning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e20fdb12",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1d415a3e",
    "metadata": {},
    "outputs": [
@@ -382,12 +382,12 @@
    ],
    "source": [
     "import joblib\n",
-    "joblib.dump(final_model, \"../src/RandomForest_model.pkl\", compress=9)"
+    "joblib.dump(final_model, \"../outputs/RandomForest_model.pkl\", compress=9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "c1335010",
    "metadata": {},
    "outputs": [
@@ -408,8 +408,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "53520e0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m categ_var = \u001b[43mdf\u001b[49m.select_dtypes(include=\u001b[33m'\u001b[39m\u001b[33mobject\u001b[39m\u001b[33m'\u001b[39m).columns.tolist() + [\u001b[33m'\u001b[39m\u001b[33mregistration_year\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mregistration_month\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcylinders\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mseats\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdoors\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      2\u001b[39m categ_var\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "categ_var = df.select_dtypes(include='object').columns.tolist() + ['registration_year', 'registration_month', 'cylinders', 'seats', 'doors']\n",
+    "categ_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a510438",
    "metadata": {},
    "outputs": [],
    "source": []
