ml pipeline, db and reduced model

--- a/notebooks/1_data_processing.ipynb
+++ b/notebooks/1_data_processing.ipynb
@@ -5,7 +5,7 @@
    "id": "ee4c1abc",
    "metadata": {},
    "source": [
-    "# 1. Data Processing, Formatting and Cleaning\n",
+    "# 1. Data Processing, Formatting and Cleaning + DB\n",
     "The first task will be to transform the raw data we have. Those were extracted from the website autocasion.com and stored in a csv file. Then, translated into English in the notebook 0_translation.ipynb. \n",
     "\n",
     "The goal is to get a clean dataset ready to be analyzed for EDA by: \n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8eeca8ee",
    "metadata": {},
    "outputs": [],
@@ -1032,12 +1032,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "e523bf51",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/data_formatted.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b52b26f",
+   "metadata": {},
+   "source": [
+    "## Create the database\n",
+    "Optionaly, we can execute this code to create the local database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "977c30ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/data_formatted.csv')\n",
+    "df_formatted = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3aa4ddb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_formatted = df_formatted.where(pd.notnull(df_formatted), None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dd3c752c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9657b546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to create the db\n",
+    "from src.database import execute_query, insert_df_sqlalchemy\n",
+    "\n",
+    "with open(\"../src/query.sql\", \"r\") as file:\n",
+    "    query = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "22f4e85a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "396b5c13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Inserted 106149 rows into 'cars' table.\n"
+     ]
+    }
+   ],
+   "source": [
+    "insert_df_sqlalchemy(df=df_formatted)"
    ]
   }
  ],
